# Pytest-Python-Poetry-CRUD-FastAPI-SQLModel

./: README.md
fastapi-neon/: .env  pyproject.toml
fastapi-neon/env/: pyvenv.cfg
fastapi-neon/env/Scripts/: activate  activate.bat
fastapi-neon/fastapi_neon/: main.py  settings.py
fastapi-neon/tests/: test_main.py
